--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "Foundry/lib/forge-std"]
 	path = Foundry/lib/forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "Foundry/lib/chainlink-brownie-contracts"]
+	path = Foundry/lib/chainlink-brownie-contracts
+	url = https://github.com/smartcontractkit/chainlink-brownie-contracts
+[submodule "lib/chainlink-brownie-contracts"]
+	path = lib/chainlink-brownie-contracts
+	url = https://github.com/smartcontractkit/chainlink-brownie-contracts
